--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Login to registry
         uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # v1.14.1
         with:
-          registry: quay.io
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
